--- a/tools/release_info/release_main_info.json
+++ b/tools/release_info/release_main_info.json
@@ -1,6 +1,6 @@
 # **************************************************************************************************************
 #
-# Copyright 2020-2023 Robert Bosch GmbH
+# Copyright 2020-2024 Robert Bosch GmbH
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -106,7 +106,7 @@ Feel free to contact us when you use **RobotFramework AIO** the first time. We a
 
 - General: improved all documentations and self tests.
                  "],
-               "ADDITIONALHINTS" : ["
+               "ADDITIONALINFORMATION" : ["
 **GITHUB git tag**
    **rel/aio/0.10.0.6**
 
