add fail-fast to avoid cancelling jobs

--- a/.github/workflows/static_code_analyser.yml
+++ b/.github/workflows/static_code_analyser.yml
@@ -11,6 +11,7 @@ jobs:
   pylint:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         repositories: 
           - ''
