integrate Android Appium package

--- a/build
+++ b/build
@@ -295,7 +295,6 @@ function build_debian()
 	rm -rf ./output_lx/${PACK_NAME}/
 
 	#now create package new
-	mkdir -p ./output_lx/${PACK_NAME}/opt/bosch/robfw
 	mkdir -p ./output_lx/${PACK_NAME}/opt/rfwaio/linux
 	mkdir -p ./output_lx/${PACK_NAME}/opt/rfwaio/linux/icon
 	mkdir -p ./output_lx/${PACK_NAME}/usr/local/bin
@@ -308,7 +307,11 @@ function build_debian()
 	chmod 755 ./output_lx/${PACK_NAME}/DEBIAN/prerm
 	cp ./config/build/dpkg_build/robot.ico ./output_lx/${PACK_NAME}/opt/rfwaio/linux/icon
 	cp ./config/build/dpkg_build/codium.png ./output_lx/${PACK_NAME}/opt/rfwaio/linux/icon
+	cp ./config/build/dpkg_build/appium.png ./output_lx/${PACK_NAME}/opt/rfwaio/linux/icon
+	cp ./config/build/dpkg_build/appium-inspector.png ./output_lx/${PACK_NAME}/opt/rfwaio/linux/icon
 	cp ./config/build/dpkg_build/robot.desktop ./output_lx/${PACK_NAME}/opt/rfwaio/linux/
+	cp ./config/build/dpkg_build/appium.desktop ./output_lx/${PACK_NAME}/opt/rfwaio/linux/
+	cp ./config/build/dpkg_build/appiumInspector.desktop ./output_lx/${PACK_NAME}/opt/rfwaio/linux/
 	cp ./config/build/dpkg_build/set_robotenv.sh ./output_lx/${PACK_NAME}/opt/rfwaio/linux/
 	#cp ./config/build/dpkg_build/install_dlt.sh ./output_lx/${PACK_NAME}/opt/rfwaio/linux/
 	cp ./config/build/dpkg_build/robot ./output_lx/${PACK_NAME}/usr/local/bin
@@ -323,6 +326,10 @@ function build_debian()
 	cp -R -a ../python39lx/. ./output_lx/${PACK_NAME}/opt/rfwaio/python39
 	cp -R -a ./config/tools ./output_lx/${PACK_NAME}/opt/rfwaio/tools
 	cp -R -a ./test/aio-analyzer ./output_lx/${PACK_NAME}/opt/rfwaio/tools/aio-analyzer
+
+	mkdir -p ./output_lx/${PACK_NAME}/opt/rfwaio/devtools
+	cp -R -a ../devtools/. ./output_lx/${PACK_NAME}/opt/rfwaio/devtools
+	chmod +x ./output_lx/${PACK_NAME}/opt/rfwaio/devtools/Appium-Inspector.AppImage
 
 	cp ./config/build/dpkg_build/postinst.sh ./output_lx/${PACK_NAME}/usr/local/bin/initRobotFrameworkAIO.sh
 
