--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -94,6 +94,11 @@
 
 * Fixed versions of **Appium-Python-Client==3.1.1** and **robotframework-appiumlibrary==2.0.0** to avoid in incompatible issues
 * Upgrade the pip package to version 24.0 on both Windows and Linux platforms.
+
+**Robot Framework**
+
+* Added a self test for the new log level ``USER``.
+* In log levels ``USER``, ``WARN`` and ``ERROR``, the content of the Robot Framework XML log file is further shortened.
 "
                               ]
                  }
