Fix the tiny defect on curl command.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -106,7 +106,6 @@ jobs:
           ./build
 
       - name: Update all documents
-        if: ${{ github.ref_type == 'tag' }}
         run: |
           cd ../robotframework-documentation
           doc_branch=htv3hc/feat/auto-update-doc
@@ -124,7 +123,7 @@ jobs:
           curl -X POST https://api.github.com/repos/test-fullautomation/robotframework-documentation/dispatches \
           --header 'authorization: Bearer ${{ secrets.PAT_THONG }}' \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          --data '{"event_type": "Document", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "branch" : '"$doc_branch"'}}'
+          --data '{"event_type": "Document", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "branch" : "'"$doc_branch"'"}}'
           echo -e "\e[32;01m Trigger jobs for pull request ...\e[0m"
 
       - name: Upload built package
