--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -224,11 +224,10 @@ jobs:
         fi
 
     - name: Generate release info
-      shell: cmd
+      shell: bash
       run: |
-        "%RobotPythonPath%\python" .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
-        move .\tools\release_info\release_info_RobotFramework_AIO_*.html ..\
-
+        $RobotPythonPath/python ./tools/release_info/release_info.py --configfile ./release_info_config_OSS.json
+        mv ./tools/release_info/release_info_RobotFramework_AIO_*.html ../
          
     - name: Upload test result as artifact
       if: success() || failure()
