--- a/tools/release_info/release_main_info.json
+++ b/tools/release_info/release_main_info.json
@@ -275,7 +275,7 @@ Feel free to contact us when you use or intend to use **RobotFramework AIO**. We
 
 - General: improved all documentations and self tests.
                 "],
-              "ADDITIONALHINTS" : ["
+              "ADDITIONALINFORMATION" : ["
 **GITHUB git tag**
   **rel/aio/0.11.0.**
 
