add python-testresultdbaccess repo to build pipeline

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -2,6 +2,7 @@
 python-genpackagedoc=
 python-extensions-collection=
 python-jsonpreprocessor=
+python-testresultdbaccess=
 python-pytestlog2db=
 python-microservice-base=
 python-microservice-cleware-switch=
