--- a/tools/release_info/release_info_config_OSS.json
+++ b/tools/release_info/release_info_config_OSS.json
@@ -30,7 +30,7 @@
 # Section "VERSION_CONFIG":
 # -------------------------
 
-   "VERSION_CONFIG" : "0.3.0 / 07.02.2024 (OSS version)",
+   "VERSION_CONFIG" : "0.4.0 / 07.05.2024 (OSS version)",
 
 
 # Section "PACKAGE_CONTEXT_FILE":
@@ -74,7 +74,8 @@
                               #"../../../testresultwebapp/config/robotframework_aio/release_items_TestResultWebApp.json",
                               #"../../../vscode-jsonp/config/robotframework_aio/release_items_VSCodeJsonp.json",
                               "../../../robotframework-documentation/config/robotframework_aio/release_items_RobotFrameworkAIO_Documentation.json",
-                              "../../../robotframework/config/robotframework_aio/release_items_Robotframework.json"
+                              "../../../robotframework/config/robotframework_aio/release_items_Robotframework.json",
+                              "../../../robotframework-selftest/config/robotframework_aio/release_items_RobotFramework_SelfTest.json"
                           ]
 }
 
