Change dotted-dict to pydotdict

--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -148,7 +148,7 @@
 * Integrated **PyQt5** library
 * Integrated **QtAwesome** library
 * Integrated **Asciidoxy** library
-* Integrated **dotted-dict** library
+* Integrated **pydotdict** library
 
 "
                               ]
