Add the prometheus repository

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -18,6 +18,7 @@ robotframework-robotlog2rqm=
 robotframework-robotlog2db=
 robotframework-documentation=
 robotframework-doip=
+robotframework-prometheus=
 robotframework=develop_6.1
 
 testresultwebapp=
