Correct the release info adapt to new section.

--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -157,6 +157,19 @@
 
 
 "
+                              ],
+                    "0.12.1" : [
+"
+**Python Packages**
+
+* Integrated **robotframework-prometheus** library
+
+**Python Package Index (PyPI)**
+
+* Publish Robotframework-prometheus package to `PyPI <https://pypi.org/user/ThPoll>`_
+
+
+"
                               ]
                  }
 }
