Update release note info.

--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -163,6 +163,8 @@
 **Python Packages**
 
 * Integrated **robotframework-prometheus** library
+* Integrated **prometheus_client** library
+
 
 **Python Package Index (PyPI)**
 
