--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -228,6 +228,16 @@ jobs:
             exit 1
         fi
 
+    - name: Run tests coverage on Windows
+      shell: bash
+      run: |
+        "$RobotPythonPath/python" test/aio-test-coverage/aio-test-coverage.py 2>&1 | tee console_log.txt
+        # Get system error code from python program
+        exit_code=${PIPESTATUS[0]}
+        if [ $exit_code -ne 0 ]; then
+            exit 1
+        fi
+
     - name: Generate release info
       shell: cmd
       run: |
