Integrate pika library for DevAtServ tools.

--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -164,6 +164,8 @@
 
 * Integrated **robotframework-prometheus** library
 * Integrated **prometheus_client** library
+* Integrated **pika** library
+
 
 
 **Python Package Index (PyPI)**
