--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -301,6 +301,16 @@ jobs:
             exit 1
         fi
 
+    - name: Run tests coverage on Windows
+      run: |
+          . /opt/rfwaio/linux/set_robotenv.sh
+          "$RobotPythonPath/python" test/aio-test-trigger/aio-test-coverage.py 2>&1 | tee console_log.txt
+          # Get system error code from python program
+          exit_code=${PIPESTATUS[0]}
+          if [ $exit_code -ne 0 ]; then
+              exit 1
+          fi
+
     - name: Generate release info
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
@@ -316,6 +326,7 @@ jobs:
           ${{ runner.workspace }}/**/*/aiotestlogfiles/*
           ${{ runner.workspace }}/**/*/testlogfiles/*
           ${{ runner.workspace }}/**/*/console_log.txt
+          ${{ runner.workspace }}/**/*/*/coverage_report/*
           ${{ runner.workspace }}/release_info_RobotFramework_AIO_*.html
 
 
