--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -304,7 +304,7 @@ jobs:
     - name: Run tests coverage on Windows
       run: |
           . /opt/rfwaio/linux/set_robotenv.sh
-          "$RobotPythonPath/python" test/aio-test-trigger/aio-test-coverage.py 2>&1 | tee console_log.txt
+          "$RobotPythonPath/python3.9" test/aio-test-trigger/aio-test-coverage.py 2>&1 | tee console_log.txt
           # Get system error code from python program
           exit_code=${PIPESTATUS[0]}
           if [ $exit_code -ne 0 ]; then
