--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -233,6 +233,12 @@ jobs:
       run: |
         "%RobotPythonPath%\python" .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
         move .\tools\release_info\release_info_RobotFramework_AIO_*.html ..\
+    
+    - name: Generate tutorial doc
+      shell: cmd
+      run: |
+        cd robotframework-tutorial\__setup\
+        "%RobotPythonPath%\python" .\gen_doc_tutorial.py
          
     - name: Upload test result as artifact
       if: success() || failure()
@@ -293,7 +299,12 @@ jobs:
         . /opt/rfwaio/linux/set_robotenv.sh
         $RobotPythonPath/python3.9 tools/release_info/release_info.py --configfile ./release_info_config_OSS.json
         mv ./tools/release_info/release_info_RobotFramework_AIO_*.html ../
-       
+    
+    - name: Generate tutorial doc
+      run: |
+        cd robotframework-tutorial\__setup\
+        $RobotPythonPath/python3.9 ./gen_doc_tutorial.py
+
     - name: Upload test result as artifact
       if: success() || failure()
       uses: actions/upload-artifact@v3
@@ -304,7 +315,6 @@ jobs:
           ${{ runner.workspace }}/**/*/testlogfiles/*
           ${{ runner.workspace }}/**/*/console_log.txt
           ${{ runner.workspace }}/release_info_RobotFramework_AIO_*.html
-
 
   release:
     name: Release AIO
