add ###INTERMEDIATE_LABELS### variable which content intermediate versions for github links

--- a/tools/release_info/release_main_info.json
+++ b/tools/release_info/release_main_info.json
@@ -790,29 +790,29 @@ Feel free to contact us when you use or intend to use **RobotFramework AIO**. We
           #                              
           #                              "],
                 "VERSIONEDLINKS"  : [
-                                      "https://github.com/test-fullautomation/python-extensions-collection/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-extensions-collection",
-                                      "https://github.com/test-fullautomation/python-genpackagedoc/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-genpackagedoc",
-                                      "https://github.com/test-fullautomation/python-jsonpreprocessor/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-jsonpreprocessor",
-                                      "https://github.com/test-fullautomation/python-microservice-base/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-microservice-base",
-                                      "https://github.com/test-fullautomation/python-microservice-cleware-switch/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-microservice-cleware-switch",
-                                      "https://github.com/test-fullautomation/python-pytestlog2db/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; python-pytestlog2db",
-                                  "",  "https://github.com/test-fullautomation/robotframework/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework (core)",
-                                      "https://github.com/test-fullautomation/robotframework-dbus/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-dbus",
-                                      "https://github.com/test-fullautomation/robotframework-documentation/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-documentation",
-                                      "https://github.com/test-fullautomation/robotframework-doip/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-doip",
-                                      "https://github.com/test-fullautomation/robotframework-extensions-collection/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-extensions-collectionnnn",
-                                      "https://github.com/test-fullautomation/robotframework-lsp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-lsp",
-                                      "https://github.com/test-fullautomation/robotframework-qconnect-base/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-qconnect-base",
-                                      "https://github.com/test-fullautomation/robotframework-qconnect-winapp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-qconnect-winapp",
-                                      "https://github.com/test-fullautomation/robotframework-robotlog2db/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-robotlog2db",
-                                      "https://github.com/test-fullautomation/robotframework-robotlog2rqm/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-robotlog2rqm",
-                                      "https://github.com/test-fullautomation/robotframework-selftest/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-selftest",
-                                      "https://github.com/test-fullautomation/robotframework-testsuitesmanagement/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-testsuitesmanagement",
-                                      "https://github.com/test-fullautomation/robotframework-tutorial/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; robotframework-tutorial",
-                                  "",  "https://github.com/test-fullautomation/RobotFramework_AIO/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; RobotFramework_AIO (build)",
-                                      "https://github.com/test-fullautomation/testresultwebapp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; testresultwebapp",
-                                      "https://github.com/test-fullautomation/vscode-jsonp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###; merged pull-requests; vscode-jsonp",
-                                  "",  "https://gitlab-apertispro.boschdevcloud.com/robotframework-aio/main/build/-/merge_requests?scope=all&utf8=%E2%9C%93&state=merged&milestone_title###LABEL###; merged pull-requests; Gitlab build and CI"
+                                      "https://github.com/test-fullautomation/python-extensions-collection/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-extensions-collection",
+                                      "https://github.com/test-fullautomation/python-genpackagedoc/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-genpackagedoc",
+                                      "https://github.com/test-fullautomation/python-jsonpreprocessor/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-jsonpreprocessor",
+                                      "https://github.com/test-fullautomation/python-microservice-base/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-microservice-base",
+                                      "https://github.com/test-fullautomation/python-microservice-cleware-switch/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-microservice-cleware-switch",
+                                      "https://github.com/test-fullautomation/python-pytestlog2db/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; python-pytestlog2db",
+                                  "",  "https://github.com/test-fullautomation/robotframework/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework (core)",
+                                      "https://github.com/test-fullautomation/robotframework-dbus/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-dbus",
+                                      "https://github.com/test-fullautomation/robotframework-documentation/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-documentation",
+                                      "https://github.com/test-fullautomation/robotframework-doip/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-doip",
+                                      "https://github.com/test-fullautomation/robotframework-extensions-collection/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-extensions-collectionnnn",
+                                      "https://github.com/test-fullautomation/robotframework-lsp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-lsp",
+                                      "https://github.com/test-fullautomation/robotframework-qconnect-base/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-qconnect-base",
+                                      "https://github.com/test-fullautomation/robotframework-qconnect-winapp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-qconnect-winapp",
+                                      "https://github.com/test-fullautomation/robotframework-robotlog2db/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-robotlog2db",
+                                      "https://github.com/test-fullautomation/robotframework-robotlog2rqm/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-robotlog2rqm",
+                                      "https://github.com/test-fullautomation/robotframework-selftest/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-selftest",
+                                      "https://github.com/test-fullautomation/robotframework-testsuitesmanagement/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-testsuitesmanagement",
+                                      "https://github.com/test-fullautomation/robotframework-tutorial/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; robotframework-tutorial",
+                                  "",  "https://github.com/test-fullautomation/RobotFramework_AIO/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; RobotFramework_AIO (build)",
+                                      "https://github.com/test-fullautomation/testresultwebapp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; testresultwebapp",
+                                      "https://github.com/test-fullautomation/vscode-jsonp/pulls?q=is%3Apr+is%3Aclosed+label%3A###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; vscode-jsonp",
+                                  "",  "https://gitlab-apertispro.boschdevcloud.com/robotframework-aio/main/build/-/merge_requests?scope=all&utf8=%E2%9C%93&state=merged&milestone_title###LABEL###,###INTERMEDIATE_LABELS###; merged pull-requests; Gitlab build and CI"
                                     ]
                        },
              
